--- a/MSI/Product.wxs
+++ b/MSI/Product.wxs
@@ -65,7 +65,7 @@
     <Property Id="USETRAY" Value="1" />
     <Property Id="WEBROOT" Value="/fog" />
     <Property Id="ROOTLOG" Value="1" />
-    <Property Id="WEBADDRESS" Value="fog-server" />
+    <Property Id="WEBADDRESS" Value="fogserver" />
     <Property Id="HTTPS" Value="0" />
 
     <Property Id="MSIRESTARTMANAGERCONTROL" Value="Disable" />
