--- a/MSI/Dialog_Config.wxs
+++ b/MSI/Dialog_Config.wxs
@@ -36,7 +36,7 @@
         <Control Type="Text" Id="WEBROOTText" Width="50" Height="17" X="8" Y="49" Text="Web Root:" />
         <Control Property="WEBROOT" Type="Edit" Id="WEBROOTTextBox" Width="287" Height="15" X="71" Y="45" Text="/fog" />
         <Control Property="ROOTLOG" Type="CheckBox" Id="LogFile" Width="247" Height="20" X="11" Y="94"
-                 Text="Put Log File in Root (Otherwise will be in Installation Directory)" CheckBoxValue="1"
+                 Text="Put Log File in filesystem root (Otherwise will be in Installation Directory)" CheckBoxValue="1"
                  TabSkip="yes" />
       </Dialog>
     </UI>
