Install new language files on windows

--- a/MSI/Product.wxs
+++ b/MSI/Product.wxs
@@ -105,6 +105,9 @@
       <ComponentRef Id="GermanComponent"/>
       <ComponentRef Id="FrenchComponent"/>
       <ComponentRef Id="DutchComponent"/>
+      <ComponentRef Id="NorwegianComponent"/>
+      <ComponentRef Id="SpainComponent"/>
+      <ComponentRef Id="BasqueComponent"/>      
       <ComponentRef Id="FOGUserServiceShortcutComponenet" />
     </Feature>
   </Product>
