Update external library Newtonsoft.Json to v13.0.1

--- a/MSI/Files.wxs
+++ b/MSI/Files.wxs
@@ -45,7 +45,7 @@
             <File Id="Zazzles" Name="Zazzles.dll" Source="..\bin\Zazzles.dll" />
             <File Id="Modules" Name="Modules.dll" Source="..\bin\Modules.dll" />
             
-            <File Id="Newtonsoft.Json" Name="Newtonsoft.Json.dll" Source="..\libs\Newtonsoft.Json.dll" />
+            <File Id="Newtonsoft.Json" Name="Newtonsoft.Json.dll" Source="..\bin\Newtonsoft.Json.dll" />
             <File Id="EngineIoClientDotNet" Name="EngineIoClientDotNet.dll" Source="..\bin\EngineIoClientDotNet.dll" />
             <File Id="log4net" Name="log4net.dll" Source="..\bin\log4net.dll" />
             <File Id="SuperSocketClientEngine" Name="SuperSocket.ClientEngine.dll" Source="..\bin\SuperSocket.ClientEngine.dll" />
